# rag_labor_law

./: .gitignore  README.md  app.py  main.py  pyproject.toml
scripts/: ingest.py  query.py
src/: __init__.py  config.py  embedder.py  vectorstore.py
src/indexing/: __init__.py  chunker.py  loader.py  pipeline.py  text_processor.py
src/retrieval/: __init__.py  generator.py  retriever.py
