[project]
name = "rag-labor-law"
version = "0.1.0"
description = "RAG system for Vietnamese Labor Law document retrieval"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-community>=0.3.0",
    "pymupdf>=1.24.0",
    "underthesea>=6.8.0",
    "qdrant-client[fastembed]>=1.12.0",
    "fastembed>=0.4.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-dotenv>=1.0.0",
    "langchain-experimental>=0.4.2",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.1.1",
    "uuid>=1.30",
    "langchain-core>=1.4.0",
    "gradio>=6.18.0",
]
